@@ -73,8 +73,11 @@ PRESERVE_DEATH_LEVEL = 201
 # Default is False. Player ghosts live. if TRUE ghosts die instantly [false]
 NO_GHOST = false
 
-# Option : bumping into a door will automatically try to open it [true]
-DOOR_BUMP_OPEN = true
+# Option : determine the behaviour when walking into misc. things [7]
+# 0x01 - bumping into a door will automatically try to open it
+# 0x02 - allow to walk through the house door
+# 0x04 - walking/bumping onto a visible trap will try to disarm it
+DOOR_BUMP_OPEN = 7
 
 # How long (per level of the unique) it should take a unique to respawn [10]
 #
